# kiwoom_stock

./: .gitignore  README.MD  main.py  pyproject.toml  strategy_config.json  키움 REST API 문서.xlsx
src/kiwoom_stock/: utils.py
src/kiwoom_stock/api/: auth.py  base.py  client.py  exceptions.py  parser.py
src/kiwoom_stock/api/services/: account.py  market.py
src/kiwoom_stock/core/: database.py  indicators.py
src/kiwoom_stock/monitoring/: analyzer.py  collector.py  engine.py  manager.py  notifier.py  strategy.py  utils.py
src/kiwoom_stock/tests/: test_auth.py  test_base.py
src/kiwoom_stock/utils/: config.py  gemini_cli.py
tests/: test_integration.py
tools/: backtest_reporter.py  trade_validator.py
